<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    
    
    <data>
        <import type="android.view.View"/>

        <variable
                name="account"
                type="ru.bk.klim9.chat.domain.account.AccountEntity" />
    </data>
    

    <com.google.android.material.navigation.NavigationView

            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/nav_header_padding_top">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profileContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivUserImage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/circle_circle"
                        android:src="@drawable/ic_account_circle"
                        app:profileImage="@{account.image}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivUserImage"
                        app:layout_constraintTop_toTopOf="parent">

                    <TextView
                            android:id="@+id/tvUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/small_margin"
                            android:lines="1"
                            android:text="@{account.name}"
                            tools:text="@string/name"
                            android:textSize="18sp" />

                    <TextView
                            android:id="@+id/tvUserEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/small_margin"
                            android:layout_marginLeft="@dimen/small_margin"
                            android:layout_marginTop="3dp"
                            android:lines="1"
                            android:text="@{account.email}"
                            tools:text="@string/email" />

                    <TextView
                            android:id="@+id/tvUserStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/small_margin"
                            android:layout_marginLeft="@dimen/small_margin"
                            android:layout_marginTop="3dp"
                            android:lines="1"
                            android:text="@{account.status}"
                            android:visibility="@{account.status.empty ? View.GONE : View.VISIBLE}"
                            tools:text="Status" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileContainer" />


            <RelativeLayout
                    android:id="@+id/btnChats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                <LinearLayout
                        android:id="@+id/llChats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/imgvChats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/profile"
                            android:src="@drawable/baseline_chat_black_36"
                            android:tint="@color/colorPrimary" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:gravity="start|center_vertical"
                            android:text="@string/chats"
                            android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/btnFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">

                <LinearLayout
                        android:id="@+id/llFriendsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/imgvFriendsList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/profile"
                            android:src="@drawable/baseline_group_black_36"
                            android:tint="@color/colorPrimary" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:gravity="start|center_vertical"
                            android:text="@string/friends"
                            android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/btnAddFriend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp">


                <LinearLayout
                        android:id="@+id/llAddFriend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/imgvAddFriend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/add_friend"
                            android:src="@drawable/baseline_person_add_black_36"
                            android:tint="@color/colorPrimary" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/add_friend"
                            android:textSize="16sp" />
                </LinearLayout>

                <RelativeLayout
                        android:id="@+id/containerAddFriend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/llAddFriend"
                        android:layout_marginTop="8dp"
                        android:visibility="gone">

                    <com.andreabaccega.widget.FormEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_edittext_register_login"
                            android:gravity="center"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="2"
                            android:padding="10dp"
                            android:scrollbars="vertical"
                            android:textColor="@color/darkGrey"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/normal_text_size"
                            tools:emptyErrorString="@string/error_field_must_not_be_empty"
                            tools:testErrorString="@string/error_email_address_not_valid"
                            tools:testType="email" />

                    <RelativeLayout
                            android:id="@+id/rlActions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/etEmail"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp">


                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true">


                            <Button
                                    android:id="@+id/btnAdd"
                                    style="@style/Button.Primary"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="15dp"
                                    android:paddingRight="15dp"
                                    android:shadowColor="#E3BFE3"
                                    android:shadowDx="0"
                                    android:shadowDy="0"
                                    android:shadowRadius="5"
                                    android:text="@string/send_request"
                                    android:textAllCaps="false"
                                    android:textColor="#FFFFFF"
                                    android:textSize="@dimen/normal_text_size" />

                        </RelativeLayout>

                    </RelativeLayout>


                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/btnRequests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"

                    android:focusable="true"
                    android:padding="16dp">

                <LinearLayout
                        android:id="@+id/layoutRequests"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/imgvRequests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/profile"
                            android:src="@drawable/baseline_group_add_black_36"
                            android:tint="@color/colorPrimary" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:gravity="start|center_vertical"
                            android:text="@string/friend_requests"
                            android:textSize="16sp" />
                </LinearLayout>


                <RelativeLayout
                        android:id="@+id/requestContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layoutRequests"
                        android:visibility="gone" />


            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="10dp">

            <LinearLayout
                    android:id="@+id/llloginout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/imgvloginout"
                        android:layout_width="33dp"
                        android:layout_height="33dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/small_margin5"
                        android:contentDescription="@string/logout"
                        android:src="@drawable/loginout"
                        android:tint="@color/colorPrimary" />

                <TextView
                        android:id="@+id/txtvloginout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginLeft="@dimen/small_margin"
                        android:layout_marginRight="@dimen/small_margin5"
                        android:gravity="start|center_vertical"
                        android:text="@string/logout"
                        android:textSize="16sp" />

            </LinearLayout>
        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>
</layout>